# garvis

./: .gitignore  LICENSE  PLAYBOOK.md  README.md  SECURITY.md  STANDALONE.md  config.example.yaml  pyproject.toml  requirements-ci.in  requirements-ci.txt  requirements-fuzz.in  requirements-fuzz.txt  requirements-voice.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  fuzz.yml  scorecard.yml  semgrep.yml
config/: profile.example.yaml  rules.md
fuzz/: fuzz_guards.py
garvis/: __init__.py  actions.py  classify.py  config.py  dates.py  digest.py  garvis_mcp.py  gather.py  guards.py  llm.py  mcp_client.py  prioritize.py  run.py  store.py
garvis/voice/: DESIGN.md  __init__.py  __main__.py  audio.py  brain.py  com.garvis.voice.plist  config.py  daemon.py  state.py  stt.py  tts.py
tests/: test_classify.py  test_digest.py  test_guards.py  test_mcp_client.py  test_prioritize.py
