[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "garvis"
version = "0.1.0"
description = "Local edge-only personal triage + voice agent (Ollama + local MCPs)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "langchain-mcp-adapters>=0.1",
    "mcp>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
voice = [
    "av==17.1.0",
    "ctranslate2==4.8.0",
    "faster-whisper==1.2.1",
    "numpy==2.4.6",
    "onnxruntime==1.26.0",
    "PyYAML==6.0.3",
    "requests==2.34.2",
    "sounddevice==0.5.5",
    "tokenizers==0.23.1",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["garvis*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "TID", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["garvis"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
